Virtual threading (#1318)
* removing

- synchronized methods
- support for method-level testng parallelization (unused feature)
- threadlocal webdriver

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* experimenting with multi-virtual-threads

- split the element identification core to 6 CORE blocks. TODO: extract them to separate methods and form a class around them.
- used 1 service virtual thread, then 5 parallel services over virtual threads, then synchronized to perform sequential element action.
- this major enhancements should achieve better CPU utilization and show impact at a larger scale.

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* upgrading pipelines JDK to 21

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* upgrading pipelines maven to 3.9.5

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* upgrading pipelines jacoco to 0.8.10

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

* handling failure inside a virtual thread

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

---------

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>